--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Karma</title>
-	<link rel="stylesheet" href="normalize.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+	<nav class="top-navigation">
+		<div class="content">
+			<img class="logo" src="img/karma-logo.svg" alt="Karma" width="26px">
+			<ul class="nav-menu">
+				<li><a href="#" class="active">Meet Karma</a></li>
+				<li><a href="#">How it Works</a></li>
+				<li><a href="#">Store</a></li>
+				<li><a href="#">Blog</a></li>
+				<li><a href="#">Help</a></li>
+				<li><a href="#">Login</a></li>
+			</ul>
+		</div>
+	</nav>
+
 	
 </body>
 </html>
