--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 <body>
 	<nav class="top-navigation">
 		<div class="content">
-			<img class="logo" src="img/karma-logo.svg" alt="Karma" width="26px">
 			<ul class="nav-menu">
 				<li><a href="#" class="active">Meet Karma</a></li>
 				<li><a href="#">How it Works</a></li>
@@ -19,8 +18,19 @@
 				<li><a href="#">Help</a></li>
 				<li><a href="#">Login</a></li>
 			</ul>
+			<img class="logo" src="img/karma-logo.svg" alt="Karma" width="26px">
 		</div>
 	</nav>
+	<section class="introduction">
+		<div class="content">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WiFi with you, everywhere you go.</h3>
+			<div class="buttons">
+				<button>Learn More</button>
+			</div>
+		</div>
+	</section>
+
 
 	
 </body>
