--- a/index.html
+++ b/index.html
@@ -26,12 +26,29 @@
 			<h1>Introducing Karma</h1>
 			<h3>Bring WiFi with you, everywhere you go.</h3>
 			<div class="buttons">
-				<button>Learn More</button>
+				<button class="big-button">Learn More</button>
 			</div>
 		</div>
 	</section>
+	<section class="cases">
+		<div class="content">
+			<h1>Everyone neese a little Karma</h1>
+			<ul class="img-list">
+				<li>
+					<img src="img/devices.png" alt="devices">
+					<h3 class="caption">Internet for all devices</h3>
+				</li>
+				<li>
+					<img src="img/coffee.png" alt="coffee">
+					<h3 class="caption">Boost your productivity</h3>
+				</li>
+				<li>
+					<img src="img/gas.png" alt="gas pump">
+					<h3 class="caption">Pay as You Go</h3>
+				</li>
+			</ul>
 
-
-	
+		</div>
+	</section>
 </body>
 </html>
