added and styled the footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Karma</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -36,19 +37,34 @@
 			<ul class="img-list">
 				<li>
 					<img src="img/devices.png" alt="devices">
-					<h3 class="caption">Internet for all devices</h3>
+					<h2 class="caption">Internet for all devices</h2>
 				</li>
 				<li>
 					<img src="img/coffee.png" alt="coffee">
-					<h3 class="caption">Boost your productivity</h3>
+					<h2 class="caption">Boost your productivity</h2>
 				</li>
 				<li>
 					<img src="img/gas.png" alt="gas pump">
-					<h3 class="caption">Pay as You Go</h3>
+					<h2 class="caption">Pay as You Go</h2>
 				</li>
 			</ul>
-
 		</div>
 	</section>
+	<footer class="social">
+		<div class="content">
+			<hr>
+			<h4>Join us on</h4>
+			<div class="social-icon">
+				<i class="fa fa-twitter"></i>
+			</div>
+			<div class="social-icon">
+				<i class="fa fa-facebook"></i>
+			</div>
+			<div class="social-icon">
+				<i class="fa fa-instagram"></i>
+			</div>
+			<p class="copy">&copy; Karma Mobility, Inc.</p>
+		</div>
+	</footer>
 </body>
 </html>
